fix horizontal overflow

--- a/src/style/panel/panel.less
+++ b/src/style/panel/panel.less
@@ -32,6 +32,7 @@
     display: flex;
     height: 100%;
     flex-direction: column;
+    overflow-x: hidden;
     overflow-y: overlay;
 
     &--move-out--left,
